<resources>
    <string name="app_name">Meteo Data</string>

    <!--Action Bar strings-->
    <string name="action_settings">Settings</string>string>

    <!--ActivitiesLabels-->
    <string name="server_settings_label">Server settings</string>

    <!--DisplayPreferencesActivity-->
    <string name="display_preferences">Display preferences</string>
    <string name="pick_start_date">Pick start date</string>
    <string name="pick_end_date">Pick end date</string>
    <string name="ok">OK</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="picker_label">DateTimeDialogFragment</string>


    <!--ServerSettingsActivity-->
    <string name="current_server">Current server is:</string>
    <string name="tag">tag:</string>
    <string name="ip_address">ip address:</string>
    <string name="choose_server">Choose another server:</string>
    <string name="check_server_connection">Check server connection</string>
    <string name="checking_connection">checking connection...</string>
    <string name="downloading_data">downloading data...</string>
    <string name="connection_successful">Connection successful</string>
    <string name="connection_failed">Connection failed</string>
    <string name="enter_new_server_ip_tag">Enter new server tag</string>
    <string name="enter_new_server_ip_address">Enter new server IP address</string>
    <string name="add_new_server">Add new server</string>

    <!--Messages-->
    <string name="end_time_before_start_time">End time cannot be set before start time</string>
    <string name="start_time_before_end_time">Start time cannot be set after end time</string>
    <string name="no_data_to_display">There is no data to display</string>
    <string name="missing_data_update">Missing data, please update before querying</string>
    <string name="override_curr_server">Cannot override current server</string>
    <string name="adding_successful">Adding successful</string>
    <string name="cant_delete_server">Cannot delete current server</string>
    <string name="invalid_ip">invalid server IP address</string>
    <string name="empty_tag">Tag cannot be empty</string>
    <string name="tag_to_long">Tag must be 1-20 character long</string>

</resources>
