<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/display_preferences_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.DisplayPreferencesActivity">


        <TextView
            android:id="@+id/display_preferences_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/display_preferences"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/display_preferences_label">

            <RadioButton
                android:id="@+id/temperature_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/air_pressure_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/air_pressure"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/humidity_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/start_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pick_start_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            tools:textSize="18sp" />

        <EditText
            android:id="@+id/start_date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:inputType="date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_date_button"
            tools:editable="false"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/end_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pick_end_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_date_text_view"
            tools:textSize="18sp" />

        <EditText
            android:id="@+id/end_date_text_view"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center_horizontal"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/disp_prefs_connection_indicator_fragment_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/end_date_button"
            app:layout_constraintVertical_bias="0.05"
            tools:ignore="Autofill" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/disp_prefs_connection_indicator_fragment_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/display_preferences_ok_button" >
        </FrameLayout>

        <Button
            android:id="@+id/display_preferences_ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:text="@string/ok"
            tools:textSize="24sp" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>